--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,15 @@ Jinja2==2.11.3
 joblib==1.0.0
 MarkupSafe==1.1.1
 numpy==1.19.5
+pandas==1.1.5
+patsy==0.5.1
+pkg-resources==0.0.0
+python-dateutil==2.8.1
+pytz==2021.1
 scikit-learn==0.24.1
 scipy==1.5.4
+six==1.15.0
 sklearn==0.0
+statsmodels==0.12.2
 threadpoolctl==2.1.0
 Werkzeug==1.0.1
